--- a/Sprout_P5/index.html
+++ b/Sprout_P5/index.html
@@ -1,13 +1,15 @@
 <html>
-<head>
-  <title>The Nature of Code Example 6.1 Seek</title>
-  <script language="javascript" type="text/javascript" src="http://cdn.jsdelivr.net/p5.js/0.3.2/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="//cdn.jsdelivr.net/p5.js/0.3.2/addons/p5.dom.js"></script>
-  <script language="javascript" type="text/javascript" src="boid.js"></script>
-  <script language="javascript" type="text/javascript" src="flock.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-</head>
-<body>
+	<head>
+		<title>The Nature of Code Example 6.1 Seek</title>
+		<script language="javascript" type="text/javascript" src="http://cdn.jsdelivr.net/p5.js/0.3.2/p5.min.js"></script>
+		<script language="javascript" type="text/javascript" src="//cdn.jsdelivr.net/p5.js/0.3.2/addons/p5.dom.js"></script>
+		<script language="javascript" type="text/javascript" src="nnn.js"></script>
+		<script language="javascript" type="text/javascript" src="neuron.js"></script>
+		<script language="javascript" type="text/javascript" src="node.js"></script>
+		<script language="javascript" type="text/javascript" src="synapse.js"></script>
+		<script language="javascript" type="text/javascript" src="sprout.js"></script>
+	</head>
+	<body>
 
-</body>
+	</body>
 </html>
