--- a/Sprout_P5/index.html
+++ b/Sprout_P5/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>NNN</title>
+		 <script language="javascript" type="text/javascript" src="../lib/toxiclibs.js"></script>
+  		<script language="javascript" type="text/javascript" src="../lib/toxichelper.js"></script>
 		<script language="javascript" type="text/javascript" src="p5.js"></script>
 		<script language="javascript" type="text/javascript" src="nnn.js"></script>
 		<script language="javascript" type="text/javascript" src="neuron.js"></script>
