--- a/Sprout_P5/index.html
+++ b/Sprout_P5/index.html
@@ -8,6 +8,7 @@
 		<script language="javascript" type="text/javascript" src="neuron.js"></script>
 		<script language="javascript" type="text/javascript" src="node.js"></script>
 		<script language="javascript" type="text/javascript" src="synapse.js"></script>
+		<script language="javascript" type="text/javascript" src="spring.js"></script>
 		<script language="javascript" type="text/javascript" src="sprout.js"></script>
 	</head>
 	<body>
