--- a/Sprout_P5/index.html
+++ b/Sprout_P5/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>NNN</title>
 		<script language="javascript" type="text/javascript" src="p5.js"></script>
+		<script language="javascript" type="text/javascript" src="utils.js"></script>
 		<script language="javascript" type="text/javascript" src="nnn.js"></script>
 		<script language="javascript" type="text/javascript" src="neuron.js"></script>
 		<script language="javascript" type="text/javascript" src="node.js"></script>
